# anomaly-detection

./: .gitattributes  .gitignore  README.md  pyproject.toml
data/: corrupted_emnist
models/: vae.pth
src/: clean_up.py  config.py  evaluation.ipynb  find_anomalies.py  helper.ipynb  main.py  mask.py  model.py  prediction.py  preprocessing.py  train.py
