[tool.poetry]
name = "anomaly-detection"
version = "0.1.0"
description = ""
authors = ["ChrisTho23 <christophe.thomassin23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.2"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
torch = "^2.2.1"
git-lfs = "^1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
